[package]
name = "kalgan_router"
version = "0.9.1"
edition = "2018"
description = "HTTP routing tool based on routes stored in yaml files used by Kalgan Framework."
homepage = "https://kalgan.eduardocasas.com"
repository = "https://github.com/eduardocasas/kalgan-router"
license = "MIT OR Apache-2.0"
keywords = ["url", "uri", "routing", "http"]
categories = ["web-programming", "web-programming::http-server", "parsing"]

[dependencies]
log = "0.4.14"
serde_yaml = "0.8.21"
serde = { version = "1.0.130", features = ["derive"] }
regex = "1.5.4"
kalgan_string = { version = "0.9.1" }
